Use java option '--illegal-access=debug' for jdk 11.